Added decrementLives and minor clean up for Theme